# bme_calc

./: .gitignore  README.md  SPEC.md  docker-compose.yml  hitl-review-specify.md  info.md  project.state.json
backend/: .env.sample  Dockerfile  convert_xlsx_to_json.py  database.py  engine.py  evaluator.py  export_database_to_json.py  exports.py  goalseek.py  main.py  migrations.py  migrations_legacy.py  pyproject.toml  requirements.txt  router_harvest_plan.py  router_settings.py  router_variables.py  scan_excel_groups.py  scan_excel_turbinas.py  schemas.py  seeding.py  services.py  services_harvest_plan.py  services_harvest_plan_calc.py  services_reorder.py  services_scenarios.py  services_sectors.py  services_substitution.py  services_variables.py  test_cascade_sorting.py  test_engine.py  test_harvest_plan.py  test_harvest_plan_structure.py  test_scenarios.py  test_substitution.py  test_variables_formatting.py
backend/alembic/: env.py
backend/alembic/versions/: 3bef9a6d8dca_initial_schema.py
backend/data/: memorial_de_calculo_balanco.json
backend/legacy/: migrations_legacy.py
backend/scripts/: README.md  convert_xlsx_to_json.py  export_database_to_json.py  scan_excel_groups.py  scan_excel_turbinas.py
backend/src/: __init__.py  main.py
backend/src/api/: router_flowcharts.py  router_harvest_plan.py  router_settings.py  router_variables.py
backend/tests/: __init__.py  conftest.py  float_evaluator.py  test_engine.py  test_engine_decimal_parity.py  test_flowcharts.py  test_harvest_plan.py  test_scenarios.py  test_variables_formatting.py
docs/: AUDIT_RULES.md  (+11 more)
(+176 files in other folders)
