[project]
name = "backend"
version = "0.1.0"
description = "Calculadora de Balanço de Massa e Energia - Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "iapws>=1.5",
    "sqlmodel>=0.0.14",
    "scipy>=1.10.0",
    "reportlab>=4.0",
    "openpyxl>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
